--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,15 @@
 					</descriptorRefs>
 				</configuration>
 			</plugin>
-			<!-- <plugin> -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+            <!-- <plugin> -->
 			<!-- <groupId>org.apache.maven.plugins</groupId> -->
 			<!-- <artifactId>maven-gpg-plugin</artifactId> -->
 			<!-- <version>1.4</version> -->
